fixed spacing

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
   position: absolute;
   font-size: 14px;
   width: 550px;
-  left: 50%;
+  left: 51%;
   top: 84%;
   color: white;
   font-family:'IBM Plex Sans', sans-serif;
